style.css
/* ... */
html,body{
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    width: 100%;
}

html{
    scroll-behavior: smooth;
}

.noscroll {
    overflow: hidden;
    height: 100vh;
}
  

.roboto-slab-bold {
    font-family: "Roboto Slab", serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
}

#page1{
    width: 100%;
    height: 100vh;
}

#nav{
    width: 100%;
    height: 10vh;
    background-color: transparent;
    color: white;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 35px;
    font-size: 20px;
    font-family: 'roboto slab';
    position: fixed;
    z-index: 10;
    transition:  0.3s ease;
}

.head{
    text-decoration: none;
    color: aliceblue;
}

#menu-button {
    display: none; 
    font-size: 24px;
    background: none;
    border: none;
    color: white;
    cursor: pointer;
}

#menu-icon{
    width: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 30px;
    transition: opacity 0.5s ease, visibility 0.5s ease;
}

.head{
    transition: 0.3s ease-in-out;
 
}

.head:hover{
    background-color: rgba(0, 0, 0, 0.8);
    border-radius: 5px;
    cursor: pointer;
    padding: 5px 10px; 
}

#logo {
    text-align: center; 
    margin: 2.6px 25px;
    color: white;
    display: flex;
    flex-direction: row; 
    align-items: center; 
    gap: 10px;
    height: 10vh;
}

#small-logo {
    width: 30px;
    height: 30px; 
    margin-bottom: 5px; 
    border-radius: 50px;
    zoom: 150%;
    object-fit: cover;
}

#search-container {
    display: flex;
    align-items: center;
    gap: 5px;
}

#shop-icon{
    color: white;
    transition: 0.3s ease-in-out;
    margin-left: 100px;
}

#shop-icon:hover{
    cursor: pointer;
    padding: 5px 10px;
    background-color: black;
    border-radius: 5px;
}

#search-bar {
    width: 0; 
    padding: 0; 
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 16px;
    outline: none;
    transition: all 0.3s ease-in-out; 
    opacity: 0; 
}

#search-bar.active {
    width: 200px; 
    padding: 5px 10px; 
    opacity: 1;
}

#search-button {
    background-color: transparent;
    color: white;
    border: none;
    padding: 5px 10px;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.3s ease-in-out;
}

#search-button:hover {
    background-color: black;
    padding: 5px 10px;
}

#loadingpage{
    width: 100%;
    height: 100vh;
    background-image: url("loading-page-bg.jpg");
    background-size: cover;
    background-position: right center;
    display: flex;
    align-items: center;
}

#heading{
    margin-left: 40px;
    text-align: left;
    font-size: 30px;
    color: rgba(152, 69, 69, 0.923);
    font-family: "roboto slab";
    text-transform: uppercase;
    font-weight: 500;
}

#para{
    color: rgb(202, 161, 161);
    margin-top: 20px;
}

#shop{
    font-size: 25px;
    text-align: center;
    border-radius: 10px;
    margin-top: 20px;
    color: aliceblue;
    transition: 0.2s ease-in-out;
    background-color: rgb(188, 52, 52);
    text-transform: uppercase;
    font-family: "roboto slab";
    padding: 5px 20px;
}

#shop:hover{
    cursor: pointer;
    padding: 10px 25px;
    background-color: rgb(107, 28, 28);
}

#page2{
    width: 100%;
    z-index: 1;
    margin-bottom: 100px;
}

#our-history{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    margin: auto;
    gap: 20px;
    height: 50vh;
}

#our-history img{
    width: 100%;
    object-fit: cover;
    border-color: black;
}

#history{
    display: flex;
    flex-direction: column;
    align-items: start;
}

#history h1{
    text-transform: uppercase;
    font-size: 50px;
    color: rgb(100, 29, 29);
    font-family: "roboto slab";
    font-weight: 500;
    width: 70%;
    text-align: left;
}

#history p{
    font-size: 20px;
    color: rgb(100, 29, 29);
    font-family: "roboto slab";
    margin-top: 20px;
    text-align: justify;
    line-height: 1.5;
}

#learn-more {
    color: white;
    background-color: rgb(218, 60, 60);
    padding: 10px 15px;
    border: none;
    border-radius: 10px;
    font-size: 20px;
    text-transform: uppercase;
    font-family: bold;
    margin-top: 15px;
    text-align: center; 
    margin-left: 1px;
}

#learn-more-p{
    display: none; /* Initially hidden */
    font-size: inherit; /* Inherit font size from #history p */
    color: inherit; /* Inherit color from #history p */
    font-family: inherit; /* Inherit font family from #history p */
    margin-top: 20px;
    text-align: inherit; /* Inherit text alignment */
    line-height: inherit;
    text-align: justify;
    opacity: 0;
}

#learn-more-p.active{
    display: block;
    opacity: 1;
    margin-bottom: 20px;
}

#learn-more:hover {
    cursor: pointer;
    background-color: rgb(107, 28, 28);
    transition: 0.3s ease-in-out;
}

#page3{
    width: 100%;
    background-color: white;
    margin-bottom: 50px;

}

#ourproducts{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    color: black;
    text-transform: uppercase;
    font-family: "roboto slab";
    font-size: 20px;
    font-weight: 200;
}

#boxes{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 90px;
    margin-top: 50px;
}

.box{
    width: 350px;
    height: 400px;
    background-color: white;
    border-radius: 10px;
    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
}

#box1{
    width: 92%;
    height: 78%;
    border-radius: 10px;
    margin: 8px 13px;
    background-color: rgb(211, 203, 203);
}

#box1 img{
    width: 100%;
    height: 80%;
    border-radius: 10px;
    object-fit: cover;
    margin-top: 20px;
    border-radius: 5px;
}
/* ... */

